# pp-reader

./: repository.yaml
index-strikes/: CHANGELOG.md  config.yaml
pp-reader/: config.yaml
pp_reader/: .dockerignore  Dockerfile  config.yaml
pp_reader/backend/: pyproject.toml
pp_reader/backend/alembic/: alembic.ini  env.py  script.py.mako
pp_reader/backend/alembic/versions/: 0001_initial_schema.py
pp_reader/backend/app/: __init__.py  config.py  dependencies.py  main.py
pp_reader/backend/app/api/: __init__.py  events.py  routes.py  sse.py
pp_reader/backend/app/db/: __init__.py  migrations.py  pool.py
pp_reader/backend/app/db/queries/: __init__.py  api.py  fx.py  ingestion.py  metrics.py  prices.py  snapshots.py  sync.py
pp_reader/backend/app/enrichment/: __init__.py  fx.py  history.py  prices.py
pp_reader/backend/app/metrics/: __init__.py  capital_gains.py  cost_fifo.py  delta.py  dividends.py  engine.py  irr.py  irr_calculation.py  performance_index.py  risk.py  shares.py  types.py
pp_reader/backend/app/models/: constants.py  domain.py  parsed.py
pp_reader/backend/app/pipeline/: ingestion.py  parser.py  scheduler.py  snapshots.py  sync.py  watcher.py
pp_reader/backend/tests/: conftest.py  test_api.py
pp_reader/backend/tests/test_metrics/: test_capital_gains.py  test_cost_fifo.py  test_delta.py  test_dividends.py  test_engine.py  test_irr.py  test_irr_calculation.py  test_performance_index.py  test_risk.py  test_shares.py
pp_reader/backend/tests/test_pipeline/: test_fx.py  test_ingestion.py  test_parser.py  test_prices.py  test_scheduler.py  test_schema.py  test_snapshots.py  test_sync.py
pp_reader/frontend/: index.html  package.json  pnpm-lock.yaml  (+2 more)
(+38 files in other folders)
